k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-apps
  labels:
    name: laravel-apps
