k8s/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app1-service
  namespace: laravel-apps
spec:
  selector:
    app: laravel-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
