k8s/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-app2-service
  namespace: laravel-apps
spec:
  selector:
    app: laravel-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
